<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/createServerButton"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:onClick="serverButton"
        android:text="Create Server"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/connectToWiFiP2PDevice"
        app:layout_constraintTop_toBottomOf="@+id/p2pDeviceToConnectTo" />

    <Button
        android:id="@+id/connectToServerButton"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_marginStart="4dp"
        android:onClick="clientButton"
        android:text="Connect to Server"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/createServerButton"
        app:layout_constraintTop_toBottomOf="@+id/p2pDeviceToConnectTo" />


    <Button
        android:id="@+id/connectToWiFiP2PDevice"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_marginStart="4dp"
        android:onClick="wifiP2pButton"
        android:text="WiFi P2P"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/p2pDeviceToConnectTo" />

    <Button
        android:id="@+id/openCameraPreview"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="4dp"
        android:onClick="cameraPreviewButton"
        android:text="Camera Preview"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!--    <FrameLayout
            android:id="@+id/camera_preview"
            android:layout_width="640px"
            android:layout_height="360px"
            android:layout_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />-->

    <de.franzwegner.socketmulticam.AutoFitTextureView
        android:id="@+id/texture"
        android:layout_width="273dp"
        android:layout_height="205dp"

        android:layout_weight="1"
        android:onClick="cameraPreviewClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/streamImageView"
        android:layout_width="273dp"
        android:layout_height="205dp"
        android:layout_marginStart="16dp"
        android:onClick="clientPreviewClick"
        app:layout_constraintStart_toEndOf="@+id/texture"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars[3]" />

    <Button
        android:id="@+id/recordCamerasButton"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_marginBottom="4dp"
        android:onClick="recordCamerasButton"
        android:text="Records Cameras"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/openCameraPreview" />

    <Button
        android:id="@+id/stopRecordingsButton"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="4dp"
        android:onClick="stopRecordingsButton"
        android:text="Stop Recordings"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/recordCamerasButton" />

    <EditText
        android:id="@+id/ipToConnectTo"
        android:layout_width="130dp"
        android:layout_height="36dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="16dp"
        android:contentDescription="Enter IP adress to connect to"
        android:ems="10"
        android:inputType="text"
        android:text="192.168.49.1"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/p2pDeviceToConnectTo"
        app:layout_constraintTop_toBottomOf="@+id/cam1Overlay" />

    <EditText
        android:id="@+id/p2pDeviceToConnectTo"
        android:layout_width="72dp"
        android:layout_height="35dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:contentDescription="Name of WiFi P2P Device"
        android:ems="10"
        android:inputType="text"
        android:text="Poco"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cam1Overlay" />

    <TextView
        android:id="@+id/myIp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:text="My IP:"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/ServerText"
        app:layout_constraintTop_toBottomOf="@+id/cam1Overlay" />

    <TextView
        android:id="@+id/connectionInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="4dp"
        android:text="Connection Info"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/myIp"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <TextView
        android:id="@+id/serverInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="12dp"
        android:text="Server not running"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/createServerButton"
        app:layout_constraintEnd_toStartOf="@+id/ipToConnectTo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/p2pDeviceToConnectTo" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="273dp"
        android:layout_height="205dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="205dp" />

    <ImageView
        android:id="@+id/cam1Overlay"
        android:layout_width="283dp"
        android:layout_height="211dp"
        app:layout_constraintStart_toStartOf="@+id/texture"
        app:layout_constraintTop_toTopOf="@+id/texture"
        app:srcCompat="@drawable/socket_multicam_overlay" />

    <ImageView
        android:id="@+id/cam2Overlay"
        android:layout_width="283dp"
        android:layout_height="211dp"
        android:layout_marginStart="280dp"
        app:layout_constraintStart_toStartOf="@+id/texture"
        app:layout_constraintTop_toTopOf="@+id/streamImageView"
        app:srcCompat="@drawable/socket_multicam_overlay" />

    <TextView
        android:id="@+id/ServerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:text="Network"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <TextView
        android:id="@+id/cameraText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="Camera"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/openCameraPreview"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/cutsInfo"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:layout_marginStart="52dp"
        android:text="Cuts recorded:"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/openCameraPreview"
        app:layout_constraintStart_toEndOf="@+id/cameraText" />


</android.support.constraint.ConstraintLayout>